set( BOTAN_SRC_DIR "${CMAKE_CURRENT_LIST_DIR}/src/" )

set(
	BOTAN_SOURCES
	"${BOTAN_SRC_DIR}/lib/asn1/alg_id.cpp"
	"${BOTAN_SRC_DIR}/lib/asn1/asn1_attribute.cpp"
	"${BOTAN_SRC_DIR}/lib/asn1/asn1_obj.cpp"
	"${BOTAN_SRC_DIR}/lib/asn1/asn1_oid.cpp"
	"${BOTAN_SRC_DIR}/lib/asn1/asn1_print.cpp"
	"${BOTAN_SRC_DIR}/lib/asn1/asn1_str.cpp"
	"${BOTAN_SRC_DIR}/lib/asn1/asn1_time.cpp"
	"${BOTAN_SRC_DIR}/lib/asn1/ber_dec.cpp"
	"${BOTAN_SRC_DIR}/lib/asn1/der_enc.cpp"
	"${BOTAN_SRC_DIR}/lib/asn1/oid_maps.cpp"
	"${BOTAN_SRC_DIR}/lib/asn1/oids.cpp"
	"${BOTAN_SRC_DIR}/lib/base/scan_name.cpp"
	"${BOTAN_SRC_DIR}/lib/base/symkey.cpp"
	"${BOTAN_SRC_DIR}/lib/block/aes/aes.cpp"
	"${BOTAN_SRC_DIR}/lib/block/aes/aes_armv8/aes_armv8.cpp"
	"${BOTAN_SRC_DIR}/lib/block/aes/aes_ni/aes_ni.cpp"
	"${BOTAN_SRC_DIR}/lib/block/aes/aes_power8/aes_power8.cpp"
	"${BOTAN_SRC_DIR}/lib/block/aes/aes_ssse3/aes_ssse3.cpp"
	"${BOTAN_SRC_DIR}/lib/block/aria/aria.cpp"
	"${BOTAN_SRC_DIR}/lib/block/block_cipher.cpp"
	"${BOTAN_SRC_DIR}/lib/block/blowfish/blowfish.cpp"
	"${BOTAN_SRC_DIR}/lib/block/camellia/camellia.cpp"
	"${BOTAN_SRC_DIR}/lib/block/cascade/cascade.cpp"
	"${BOTAN_SRC_DIR}/lib/block/cast/cast128.cpp"
	"${BOTAN_SRC_DIR}/lib/block/cast/cast256.cpp"
	"${BOTAN_SRC_DIR}/lib/block/des/des.cpp"
	"${BOTAN_SRC_DIR}/lib/block/des/des_tab.cpp"
	"${BOTAN_SRC_DIR}/lib/block/des/desx.cpp"
	"${BOTAN_SRC_DIR}/lib/block/gost_28147/gost_28147.cpp"
	"${BOTAN_SRC_DIR}/lib/block/idea/idea.cpp"
	"${BOTAN_SRC_DIR}/lib/block/idea/idea_sse2/idea_sse2.cpp"
	"${BOTAN_SRC_DIR}/lib/block/kasumi/kasumi.cpp"
	"${BOTAN_SRC_DIR}/lib/block/lion/lion.cpp"
	"${BOTAN_SRC_DIR}/lib/block/misty1/misty1.cpp"
	"${BOTAN_SRC_DIR}/lib/block/noekeon/noekeon.cpp"
	"${BOTAN_SRC_DIR}/lib/block/noekeon/noekeon_simd/noekeon_simd.cpp"
	"${BOTAN_SRC_DIR}/lib/block/seed/seed.cpp"
	"${BOTAN_SRC_DIR}/lib/block/serpent/serpent.cpp"
	"${BOTAN_SRC_DIR}/lib/block/serpent/serpent_simd/serpent_simd.cpp"
	"${BOTAN_SRC_DIR}/lib/block/shacal2/shacal2.cpp"
	"${BOTAN_SRC_DIR}/lib/block/shacal2/shacal2_simd/shacal2_simd.cpp"
	"${BOTAN_SRC_DIR}/lib/block/sm4/sm4.cpp"
	"${BOTAN_SRC_DIR}/lib/block/threefish_512/threefish_512.cpp"
	"${BOTAN_SRC_DIR}/lib/block/threefish_512/threefish_512_avx2/threefish_avx2.cpp"
	"${BOTAN_SRC_DIR}/lib/block/twofish/twofish.cpp"
	"${BOTAN_SRC_DIR}/lib/block/twofish/twofish_tab.cpp"
	"${BOTAN_SRC_DIR}/lib/block/xtea/xtea.cpp"
	"${BOTAN_SRC_DIR}/lib/codec/base64/base64.cpp"
	"${BOTAN_SRC_DIR}/lib/codec/hex/hex.cpp"
	"${BOTAN_SRC_DIR}/lib/entropy/entropy_srcs.cpp"
	"${BOTAN_SRC_DIR}/lib/entropy/darwin_secrandom/darwin_secrandom.cpp"
	"${BOTAN_SRC_DIR}/lib/entropy/dev_random/dev_random.cpp"
	"${BOTAN_SRC_DIR}/lib/entropy/getentropy/getentropy.cpp"
	"${BOTAN_SRC_DIR}/lib/entropy/proc_walk/proc_walk.cpp"
	"${BOTAN_SRC_DIR}/lib/entropy/rdrand/rdrand.cpp"
	"${BOTAN_SRC_DIR}/lib/entropy/rdseed/rdseed.cpp"
	"${BOTAN_SRC_DIR}/lib/entropy/win32_stats/es_win32.cpp"
	"${BOTAN_SRC_DIR}/lib/ffi/ffi.cpp"
	"${BOTAN_SRC_DIR}/lib/ffi/ffi_block.cpp"
	"${BOTAN_SRC_DIR}/lib/ffi/ffi_cert.cpp"
	"${BOTAN_SRC_DIR}/lib/ffi/ffi_cipher.cpp"
	"${BOTAN_SRC_DIR}/lib/ffi/ffi_hash.cpp"
	"${BOTAN_SRC_DIR}/lib/ffi/ffi_kdf.cpp"
	"${BOTAN_SRC_DIR}/lib/ffi/ffi_keywrap.cpp"
	"${BOTAN_SRC_DIR}/lib/ffi/ffi_mac.cpp"
	"${BOTAN_SRC_DIR}/lib/ffi/ffi_mp.cpp"
	"${BOTAN_SRC_DIR}/lib/ffi/ffi_pk_op.cpp"
	"${BOTAN_SRC_DIR}/lib/ffi/ffi_pkey.cpp"
	"${BOTAN_SRC_DIR}/lib/ffi/ffi_pkey_algs.cpp"
	"${BOTAN_SRC_DIR}/lib/ffi/ffi_rng.cpp"
	"${BOTAN_SRC_DIR}/lib/filters/algo_filt.cpp"
	"${BOTAN_SRC_DIR}/lib/filters/basefilt.cpp"
	"${BOTAN_SRC_DIR}/lib/filters/buf_filt.cpp"
	"${BOTAN_SRC_DIR}/lib/filters/cipher_filter.cpp"
	"${BOTAN_SRC_DIR}/lib/filters/codec_filt/b64_filt.cpp"
	"${BOTAN_SRC_DIR}/lib/filters/codec_filt/hex_filt.cpp"
	"${BOTAN_SRC_DIR}/lib/filters/comp_filter.cpp"
	"${BOTAN_SRC_DIR}/lib/filters/data_snk.cpp"
	"${BOTAN_SRC_DIR}/lib/filters/filter.cpp"
	"${BOTAN_SRC_DIR}/lib/filters/key_filt.cpp"
	"${BOTAN_SRC_DIR}/lib/filters/out_buf.cpp"
	"${BOTAN_SRC_DIR}/lib/filters/pipe.cpp"
	"${BOTAN_SRC_DIR}/lib/filters/pipe_io.cpp"
	"${BOTAN_SRC_DIR}/lib/filters/pipe_rw.cpp"
	"${BOTAN_SRC_DIR}/lib/filters/secqueue.cpp"
	"${BOTAN_SRC_DIR}/lib/filters/threaded_fork.cpp"
	"${BOTAN_SRC_DIR}/lib/hash/blake2/blake2b.cpp"
	"${BOTAN_SRC_DIR}/lib/hash/checksum/adler32/adler32.cpp"
	"${BOTAN_SRC_DIR}/lib/hash/checksum/crc24/crc24.cpp"
	"${BOTAN_SRC_DIR}/lib/hash/checksum/crc32/crc32.cpp"
	"${BOTAN_SRC_DIR}/lib/hash/comb4p/comb4p.cpp"
	"${BOTAN_SRC_DIR}/lib/hash/gost_3411/gost_3411.cpp"
	"${BOTAN_SRC_DIR}/lib/hash/hash.cpp"
	"${BOTAN_SRC_DIR}/lib/hash/keccak/keccak.cpp"
	"${BOTAN_SRC_DIR}/lib/hash/md4/md4.cpp"
	"${BOTAN_SRC_DIR}/lib/hash/md5/md5.cpp"
	"${BOTAN_SRC_DIR}/lib/hash/mdx_hash/mdx_hash.cpp"
	"${BOTAN_SRC_DIR}/lib/hash/par_hash/par_hash.cpp"
	"${BOTAN_SRC_DIR}/lib/hash/rmd160/rmd160.cpp"
	"${BOTAN_SRC_DIR}/lib/hash/sha1/sha160.cpp"
	"${BOTAN_SRC_DIR}/lib/hash/sha1/sha1_armv8/sha1_armv8.cpp"
	"${BOTAN_SRC_DIR}/lib/hash/sha1/sha1_sse2/sha1_sse2.cpp"
	"${BOTAN_SRC_DIR}/lib/hash/sha1/sha1_x86/sha1_x86.cpp"
	"${BOTAN_SRC_DIR}/lib/hash/sha2_32/sha2_32.cpp"
	"${BOTAN_SRC_DIR}/lib/hash/sha2_32/sha2_32_x86/sha2_32_x86.cpp"
	"${BOTAN_SRC_DIR}/lib/hash/sha2_32/sha2_32_armv8/sha2_32_armv8.cpp"
	"${BOTAN_SRC_DIR}/lib/hash/sha2_64/sha2_64.cpp"
	"${BOTAN_SRC_DIR}/lib/hash/sha3/sha3.cpp"
	"${BOTAN_SRC_DIR}/lib/hash/shake/shake.cpp"
	"${BOTAN_SRC_DIR}/lib/hash/skein/skein_512.cpp"
	"${BOTAN_SRC_DIR}/lib/hash/sm3/sm3.cpp"
	"${BOTAN_SRC_DIR}/lib/hash/streebog/streebog.cpp"
	"${BOTAN_SRC_DIR}/lib/hash/streebog/streebog_precalc.cpp"
	"${BOTAN_SRC_DIR}/lib/hash/tiger/tig_tab.cpp"
	"${BOTAN_SRC_DIR}/lib/hash/tiger/tiger.cpp"
	"${BOTAN_SRC_DIR}/lib/hash/whirlpool/whirlpool.cpp"
	"${BOTAN_SRC_DIR}/lib/hash/whirlpool/whrl_tab.cpp"
	"${BOTAN_SRC_DIR}/lib/kdf/hkdf/hkdf.cpp"
	"${BOTAN_SRC_DIR}/lib/kdf/kdf.cpp"
	"${BOTAN_SRC_DIR}/lib/kdf/kdf1/kdf1.cpp"
	"${BOTAN_SRC_DIR}/lib/kdf/kdf1_iso18033/kdf1_iso18033.cpp"
	"${BOTAN_SRC_DIR}/lib/kdf/kdf2/kdf2.cpp"
	"${BOTAN_SRC_DIR}/lib/kdf/prf_tls/prf_tls.cpp"
	"${BOTAN_SRC_DIR}/lib/kdf/prf_x942/prf_x942.cpp"
	"${BOTAN_SRC_DIR}/lib/kdf/sp800_108/sp800_108.cpp"
	"${BOTAN_SRC_DIR}/lib/kdf/sp800_56a/sp800_56a.cpp"
	"${BOTAN_SRC_DIR}/lib/kdf/sp800_56c/sp800_56c.cpp"
	"${BOTAN_SRC_DIR}/lib/mac/cbc_mac/cbc_mac.cpp"
	"${BOTAN_SRC_DIR}/lib/mac/cmac/cmac.cpp"
	"${BOTAN_SRC_DIR}/lib/mac/gmac/gmac.cpp"
	"${BOTAN_SRC_DIR}/lib/mac/hmac/hmac.cpp"
	"${BOTAN_SRC_DIR}/lib/mac/mac.cpp"
	"${BOTAN_SRC_DIR}/lib/mac/poly1305/poly1305.cpp"
	"${BOTAN_SRC_DIR}/lib/mac/siphash/siphash.cpp"
	"${BOTAN_SRC_DIR}/lib/mac/x919_mac/x919_mac.cpp"
	"${BOTAN_SRC_DIR}/lib/math/bigint/big_code.cpp"
	"${BOTAN_SRC_DIR}/lib/math/bigint/big_io.cpp"
	"${BOTAN_SRC_DIR}/lib/math/bigint/big_ops2.cpp"
	"${BOTAN_SRC_DIR}/lib/math/bigint/big_ops3.cpp"
	"${BOTAN_SRC_DIR}/lib/math/bigint/big_rand.cpp"
	"${BOTAN_SRC_DIR}/lib/math/bigint/bigint.cpp"
	"${BOTAN_SRC_DIR}/lib/math/bigint/divide.cpp"
	"${BOTAN_SRC_DIR}/lib/math/mp/mp_comba.cpp"
	"${BOTAN_SRC_DIR}/lib/math/mp/mp_core.cpp"
	"${BOTAN_SRC_DIR}/lib/math/mp/mp_karat.cpp"
	"${BOTAN_SRC_DIR}/lib/math/mp/mp_monty.cpp"
	"${BOTAN_SRC_DIR}/lib/math/numbertheory/dsa_gen.cpp"
	"${BOTAN_SRC_DIR}/lib/math/numbertheory/jacobi.cpp"
	"${BOTAN_SRC_DIR}/lib/math/numbertheory/make_prm.cpp"
	"${BOTAN_SRC_DIR}/lib/math/numbertheory/monty.cpp"
	"${BOTAN_SRC_DIR}/lib/math/numbertheory/monty_exp.cpp"
	"${BOTAN_SRC_DIR}/lib/math/numbertheory/mp_numth.cpp"
	"${BOTAN_SRC_DIR}/lib/math/numbertheory/nistp_redc.cpp"
	"${BOTAN_SRC_DIR}/lib/math/numbertheory/numthry.cpp"
	"${BOTAN_SRC_DIR}/lib/math/numbertheory/pow_mod.cpp"
	"${BOTAN_SRC_DIR}/lib/math/numbertheory/powm_fw.cpp"
	"${BOTAN_SRC_DIR}/lib/math/numbertheory/powm_mnt.cpp"
	"${BOTAN_SRC_DIR}/lib/math/numbertheory/primes.cpp"
	"${BOTAN_SRC_DIR}/lib/math/numbertheory/reducer.cpp"
	"${BOTAN_SRC_DIR}/lib/math/numbertheory/ressol.cpp"
	"${BOTAN_SRC_DIR}/lib/misc/aont/package.cpp"
	"${BOTAN_SRC_DIR}/lib/misc/cryptobox/cryptobox.cpp"
	"${BOTAN_SRC_DIR}/lib/misc/fpe_fe1/fpe_fe1.cpp"
	"${BOTAN_SRC_DIR}/lib/misc/hotp/hotp.cpp"
	"${BOTAN_SRC_DIR}/lib/misc/hotp/totp.cpp"
	"${BOTAN_SRC_DIR}/lib/misc/nist_keywrap/nist_keywrap.cpp"
	"${BOTAN_SRC_DIR}/lib/misc/rfc3394/rfc3394.cpp"
	"${BOTAN_SRC_DIR}/lib/misc/srp6/srp6.cpp"
	"${BOTAN_SRC_DIR}/lib/misc/tss/tss.cpp"
	"${BOTAN_SRC_DIR}/lib/modes/aead/aead.cpp"
	"${BOTAN_SRC_DIR}/lib/modes/aead/ccm/ccm.cpp"
	"${BOTAN_SRC_DIR}/lib/modes/aead/chacha20poly1305/chacha20poly1305.cpp"
	"${BOTAN_SRC_DIR}/lib/modes/aead/eax/eax.cpp"
	"${BOTAN_SRC_DIR}/lib/modes/aead/gcm/clmul/clmul.cpp"
	"${BOTAN_SRC_DIR}/lib/modes/aead/gcm/clmul_ssse3/clmul_ssse3.cpp"
	"${BOTAN_SRC_DIR}/lib/modes/aead/gcm/pmull/pmull.cpp"
	"${BOTAN_SRC_DIR}/lib/modes/aead/gcm/gcm.cpp"
	"${BOTAN_SRC_DIR}/lib/modes/aead/gcm/ghash.cpp"
	"${BOTAN_SRC_DIR}/lib/modes/aead/ocb/ocb.cpp"
	"${BOTAN_SRC_DIR}/lib/modes/aead/siv/siv.cpp"
	"${BOTAN_SRC_DIR}/lib/modes/cbc/cbc.cpp"
	"${BOTAN_SRC_DIR}/lib/modes/cfb/cfb.cpp"
	"${BOTAN_SRC_DIR}/lib/modes/cipher_mode.cpp"
	"${BOTAN_SRC_DIR}/lib/modes/mode_pad/mode_pad.cpp"
	"${BOTAN_SRC_DIR}/lib/modes/xts/xts.cpp"
	"${BOTAN_SRC_DIR}/lib/passhash/bcrypt/bcrypt.cpp"
	"${BOTAN_SRC_DIR}/lib/passhash/passhash9/passhash9.cpp"
	"${BOTAN_SRC_DIR}/lib/pbkdf/pbkdf.cpp"
	"${BOTAN_SRC_DIR}/lib/pbkdf/pbkdf1/pbkdf1.cpp"
	"${BOTAN_SRC_DIR}/lib/pbkdf/pbkdf2/pbkdf2.cpp"
	"${BOTAN_SRC_DIR}/lib/pbkdf/pgp_s2k/pgp_s2k.cpp"
	"${BOTAN_SRC_DIR}/lib/pk_pad/eme.cpp"
	"${BOTAN_SRC_DIR}/lib/pk_pad/eme_oaep/oaep.cpp"
	"${BOTAN_SRC_DIR}/lib/pk_pad/eme_pkcs1/eme_pkcs.cpp"
	"${BOTAN_SRC_DIR}/lib/pk_pad/eme_raw/eme_raw.cpp"
	"${BOTAN_SRC_DIR}/lib/pk_pad/emsa.cpp"
	"${BOTAN_SRC_DIR}/lib/pk_pad/emsa1/emsa1.cpp"
	"${BOTAN_SRC_DIR}/lib/pk_pad/emsa_pkcs1/emsa_pkcs1.cpp"
	"${BOTAN_SRC_DIR}/lib/pk_pad/emsa_pssr/pssr.cpp"
	"${BOTAN_SRC_DIR}/lib/pk_pad/emsa_raw/emsa_raw.cpp"
	"${BOTAN_SRC_DIR}/lib/pk_pad/emsa_x931/emsa_x931.cpp"
	"${BOTAN_SRC_DIR}/lib/pk_pad/hash_id/hash_id.cpp"
	"${BOTAN_SRC_DIR}/lib/pk_pad/iso9796/iso9796.cpp"
	"${BOTAN_SRC_DIR}/lib/pk_pad/mgf1/mgf1.cpp"
	"${BOTAN_SRC_DIR}/lib/pk_pad/padding.cpp"
	"${BOTAN_SRC_DIR}/lib/prov/pkcs11/p11.cpp"
	"${BOTAN_SRC_DIR}/lib/prov/pkcs11/p11_ecc_key.cpp"
	"${BOTAN_SRC_DIR}/lib/prov/pkcs11/p11_ecdh.cpp"
	"${BOTAN_SRC_DIR}/lib/prov/pkcs11/p11_ecdsa.cpp"
	"${BOTAN_SRC_DIR}/lib/prov/pkcs11/p11_mechanism.cpp"
	"${BOTAN_SRC_DIR}/lib/prov/pkcs11/p11_module.cpp"
	"${BOTAN_SRC_DIR}/lib/prov/pkcs11/p11_object.cpp"
	"${BOTAN_SRC_DIR}/lib/prov/pkcs11/p11_randomgenerator.cpp"
	"${BOTAN_SRC_DIR}/lib/prov/pkcs11/p11_rsa.cpp"
	"${BOTAN_SRC_DIR}/lib/prov/pkcs11/p11_session.cpp"
	"${BOTAN_SRC_DIR}/lib/prov/pkcs11/p11_slot.cpp"
	"${BOTAN_SRC_DIR}/lib/prov/pkcs11/p11_x509.cpp"
	"${BOTAN_SRC_DIR}/lib/psk_db/psk_db.cpp"
	"${BOTAN_SRC_DIR}/lib/psk_db/psk_db_sql.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/blinding.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/cecpq1/cecpq1.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/curve25519/curve25519.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/curve25519/donna.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/dh/dh.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/dl_algo/dl_algo.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/dl_group/dl_group.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/dl_group/dl_named.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/dlies/dlies.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/dsa/dsa.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/ec_group/curve_gfp.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/ec_group/ec_group.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/ec_group/ec_named.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/ec_group/point_gfp.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/ec_group/point_mul.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/ecc_key/ecc_key.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/ecdh/ecdh.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/ecdsa/ecdsa.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/ecgdsa/ecgdsa.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/ecies/ecies.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/eckcdsa/eckcdsa.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/ed25519/ed25519.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/ed25519/ed25519_fe.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/ed25519/ed25519_key.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/ed25519/ge.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/ed25519/sc_muladd.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/ed25519/sc_reduce.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/elgamal/elgamal.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/gost_3410/gost_3410.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/keypair/keypair.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/mce/code_based_key_gen.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/mce/gf2m_rootfind_dcmp.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/mce/gf2m_small_m.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/mce/goppa_code.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/mce/mce_workfactor.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/mce/mceliece.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/mce/mceliece_key.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/mce/polyn_gf2m.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/mceies/mceies.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/newhope/newhope.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/pbes2/pbes2.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/pem/pem.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/pk_algs.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/pk_keys.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/pk_ops.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/pkcs8.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/pubkey.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/rfc6979/rfc6979.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/rsa/rsa.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/sm2/sm2.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/sm2/sm2_enc.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/workfactor.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/x509_key.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/xmss/xmss_common_ops.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/xmss/xmss_hash.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/xmss/xmss_index_registry.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/xmss/xmss_parameters.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/xmss/xmss_privatekey.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/xmss/xmss_publickey.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/xmss/xmss_signature.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/xmss/xmss_signature_operation.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/xmss/xmss_tools.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/xmss/xmss_verification_operation.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/xmss/xmss_wots_parameters.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/xmss/xmss_wots_privatekey.cpp"
	"${BOTAN_SRC_DIR}/lib/pubkey/xmss/xmss_wots_publickey.cpp"
	"${BOTAN_SRC_DIR}/lib/rng/auto_rng/auto_rng.cpp"
	"${BOTAN_SRC_DIR}/lib/rng/chacha_rng/chacha_rng.cpp"
	"${BOTAN_SRC_DIR}/lib/rng/hmac_drbg/hmac_drbg.cpp"
	"${BOTAN_SRC_DIR}/lib/rng/rdrand_rng/rdrand_rng.cpp"
	"${BOTAN_SRC_DIR}/lib/rng/rng.cpp"
	"${BOTAN_SRC_DIR}/lib/rng/stateful_rng/stateful_rng.cpp"
	"${BOTAN_SRC_DIR}/lib/rng/system_rng/system_rng.cpp"
	"${BOTAN_SRC_DIR}/lib/stream/chacha/chacha.cpp"
	"${BOTAN_SRC_DIR}/lib/stream/chacha/chacha_sse2/chacha_sse2.cpp"
	"${BOTAN_SRC_DIR}/lib/stream/ctr/ctr.cpp"
	"${BOTAN_SRC_DIR}/lib/stream/ofb/ofb.cpp"
	"${BOTAN_SRC_DIR}/lib/stream/rc4/rc4.cpp"
	"${BOTAN_SRC_DIR}/lib/stream/salsa20/salsa20.cpp"
	"${BOTAN_SRC_DIR}/lib/stream/shake_cipher/shake_cipher.cpp"
	"${BOTAN_SRC_DIR}/lib/stream/stream_cipher.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/credentials_manager.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/msg_cert_req.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/msg_cert_status.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/msg_cert_verify.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/msg_certificate.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/msg_client_hello.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/msg_client_kex.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/msg_finished.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/msg_hello_verify.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/msg_server_hello.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/msg_server_kex.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/msg_session_ticket.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/sessions_sql/tls_session_manager_sql.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/tls_alert.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/tls_algos.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/tls_blocking.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/tls_callbacks.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/tls_cbc/tls_cbc.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/tls_channel.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/tls_ciphersuite.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/tls_client.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/tls_extensions.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/tls_handshake_hash.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/tls_handshake_io.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/tls_handshake_state.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/tls_policy.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/tls_record.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/tls_server.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/tls_session.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/tls_session_key.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/tls_session_manager_memory.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/tls_suite_info.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/tls_text_policy.cpp"
	"${BOTAN_SRC_DIR}/lib/tls/tls_version.cpp"
	"${BOTAN_SRC_DIR}/lib/utils/assert.cpp"
	"${BOTAN_SRC_DIR}/lib/utils/calendar.cpp"
	"${BOTAN_SRC_DIR}/lib/utils/charset.cpp"
	"${BOTAN_SRC_DIR}/lib/utils/cpuid/cpuid.cpp"
	"${BOTAN_SRC_DIR}/lib/utils/cpuid/cpuid_arm.cpp"
	"${BOTAN_SRC_DIR}/lib/utils/cpuid/cpuid_ppc.cpp"
	"${BOTAN_SRC_DIR}/lib/utils/cpuid/cpuid_x86.cpp"
	"${BOTAN_SRC_DIR}/lib/utils/data_src.cpp"
	"${BOTAN_SRC_DIR}/lib/utils/dyn_load/dyn_load.cpp"
	"${BOTAN_SRC_DIR}/lib/utils/exceptn.cpp"
	"${BOTAN_SRC_DIR}/lib/utils/filesystem.cpp"
	"${BOTAN_SRC_DIR}/lib/utils/http_util/http_util.cpp"
	"${BOTAN_SRC_DIR}/lib/utils/locking_allocator/locking_allocator.cpp"
	"${BOTAN_SRC_DIR}/lib/utils/mem_ops.cpp"
	"${BOTAN_SRC_DIR}/lib/utils/mem_pool/mem_pool.cpp"
	"${BOTAN_SRC_DIR}/lib/utils/os_utils.cpp"
	"${BOTAN_SRC_DIR}/lib/utils/parsing.cpp"
	"${BOTAN_SRC_DIR}/lib/utils/poly_dbl/poly_dbl.cpp"
	"${BOTAN_SRC_DIR}/lib/utils/read_cfg.cpp"
	"${BOTAN_SRC_DIR}/lib/utils/socket/socket.cpp"
	"${BOTAN_SRC_DIR}/lib/utils/thread_utils/barrier.cpp"
	"${BOTAN_SRC_DIR}/lib/utils/thread_utils/semaphore.cpp"
	"${BOTAN_SRC_DIR}/lib/utils/version.cpp"
	"${BOTAN_SRC_DIR}/lib/x509/asn1_alt_name.cpp"
	"${BOTAN_SRC_DIR}/lib/x509/cert_status.cpp"
	"${BOTAN_SRC_DIR}/lib/x509/certstor.cpp"
	"${BOTAN_SRC_DIR}/lib/x509/certstor_sql/certstor_sql.cpp"
	"${BOTAN_SRC_DIR}/lib/x509/crl_ent.cpp"
	"${BOTAN_SRC_DIR}/lib/x509/datastor.cpp"
	"${BOTAN_SRC_DIR}/lib/x509/key_constraint.cpp"
	"${BOTAN_SRC_DIR}/lib/x509/name_constraint.cpp"
	"${BOTAN_SRC_DIR}/lib/x509/ocsp.cpp"
	"${BOTAN_SRC_DIR}/lib/x509/ocsp_types.cpp"
	"${BOTAN_SRC_DIR}/lib/x509/pkcs10.cpp"
	"${BOTAN_SRC_DIR}/lib/x509/x509_ca.cpp"
	"${BOTAN_SRC_DIR}/lib/x509/x509_crl.cpp"
	"${BOTAN_SRC_DIR}/lib/x509/x509_dn.cpp"
	"${BOTAN_SRC_DIR}/lib/x509/x509_dn_ub.cpp"
	"${BOTAN_SRC_DIR}/lib/x509/x509_ext.cpp"
	"${BOTAN_SRC_DIR}/lib/x509/x509_obj.cpp"
	"${BOTAN_SRC_DIR}/lib/x509/x509cert.cpp"
	"${BOTAN_SRC_DIR}/lib/x509/x509opt.cpp"
	"${BOTAN_SRC_DIR}/lib/x509/x509path.cpp"
	"${BOTAN_SRC_DIR}/lib/x509/x509self.cpp"
)

add_library( botan OBJECT ${BOTAN_SOURCES} )

target_include_directories( botan SYSTEM PRIVATE "${CMAKE_CURRENT_LIST_DIR}/include" )
target_include_directories( botan SYSTEM PRIVATE "${CMAKE_CURRENT_LIST_DIR}/include/external" )
target_include_directories( botan SYSTEM PRIVATE "${CMAKE_CURRENT_LIST_DIR}/internal" )

set_source_files_properties( ${BOTAN_SOURCES} PROPERTIES LANGUAGE "CXX" )

if( MSVC )
	set_source_files_properties( ${BOTAN_SOURCES} PROPERTIES COMPILE_FLAGS "/W0 /wd4250 /wd4251 /wd4275" )
	set_source_files_properties( ${BOTAN_SOURCES} PROPERTIES COMPILE_DEFINITIONS "_CRT_SECURE_NO_WARNINGS" )
endif()